# mizuki

./: .gitignore  .project-actions.json  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
dispy/: __init__.py  _event_dispatch.py  _utils.py  asset.py  avatar_decoration.py  bot.py  cache.py  channel.py  collectibles.py  emoji.py  enums.py  errors.py  event_dispatch.py  flags.py  gateway.py  guild.py  http.py  managers.py  member.py  parameter.py  permissions.py  primary_guild.py  role.py  snowflake.py  state.py  sticker.py  user.py  utils.py
dispy/enums/: __init__.py  _types.py  channel.py  command.py  event_dispatch.py  guild.py  interaction.py  message.py  sticker.py  user.py
dispy/managers/: __init__.py  _types.py  channel.py  command.py  guild.py  message.py  user.py
dispy/objects/: __init__.py  asset.py  avatar_decoration.py  channel.py  collectibles.py  command.py  embed.py  emoji.py  errors.py  guild.py  interaction.py  member.py  message.py  permissions.py  presence.py  primary_guild.py  role.py  snowflake.py  sticker.py  user.py
dispy/payloads/: _types.py  avatar_decoration.py  channel.py  collectibles.py  command.py  embed.py  emoji.py  guild.py  interaction.py  member.py  message.py  primary_guild.py  role.py  sticker.py  user.py
dispy/types/: permissions.py  role.py  sticker.py
docs/source/: conf.py  dispy.asset.rst  dispy.channel.rst  dispy.client.rst  dispy.command.rst  dispy.embed.rst  dispy.errors.rst  dispy.flags.rst  dispy.guild.rst  dispy.interaction.rst  (+19 more)
mizuki/: __init__.py  _event_dispatch.py  _utils.py  bot.py  cache.py  errors.py  file.py  flags.py  gateway.py  http.py  parameter.py  state.py
tests/: test_http.py
(+75 files in other folders)
